--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -106,9 +106,11 @@
   display: flex;
   justify-content: center;
   max-width: 460px;
+  margin: 72px 0 -72px;
   padding-left: 140px;
   padding-top: var(--unit6);
   position: relative;
+  transform: translateY(-50%);
   white-space: pre-wrap;
   width: 100%;
 }
