Added new ContentfulCode type to gatsby-node.js. Specified how to render ContentfulCode in Post.js.

--- a/src/css/hero.scss
+++ b/src/css/hero.scss
@@ -28,6 +28,8 @@
   min-height: 50vh;
   position: relative;
   .hero__bg {
+    overflow: hidden;
+
     position: absolute;
     top: 0;
     left: 0;
