Changed select color in Prism stylesheet.

--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -33,7 +33,7 @@ pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection {
   text-shadow: none;
-  background: #b3d4fc;
+  background: var(--color3);
 }
 
 pre[class*="language-"]::selection,
@@ -41,7 +41,7 @@ pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
   text-shadow: none;
-  background: #b3d4fc;
+  background: var(--color3);
 }
 
 @media print {
