--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -6,9 +6,7 @@
 
 code[class*="language-"],
 pre[class*="language-"] {
-  color: black;
   background: none;
-  text-shadow: 0 1px white;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 1em;
   text-align: left;
@@ -28,7 +26,7 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection,
+/* pre[class*="language-"]::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection {
@@ -42,14 +40,14 @@ code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
   text-shadow: none;
   background: var(--color3);
-}
+} */
 
-@media print {
+/* @media print {
   code[class*="language-"],
   pre[class*="language-"] {
     text-shadow: none;
   }
-}
+} */
 
 /* Code blocks */
 pre[class*="language-"] {
@@ -141,32 +139,4 @@ pre[class*="language-"] {
 
 .token.entity {
   cursor: help;
-}
-
-/**
- * Add back the container background-color, border-radius, padding, margin
- * and overflow that we removed from <pre>.
- */
-.gatsby-highlight {
-  background-color: #fdf6e3;
-  border-radius: 0.3em;
-  margin: 0.5em 0;
-  padding: 1em;
-  overflow: auto;
-}
-
-/**
- * Remove the default PrismJS theme background-color, border-radius, margin,
- * padding and overflow.
- * 1. Make the element just wide enough to fit its content.
- * 2. Always fill the visible space in .gatsby-highlight.
- * 3. Adjust the position of the line numbers
- */
-.gatsby-highlight pre[class*="language-"] {
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  overflow: initial;
-  float: left; /* 1 */
-  min-width: 100%; /* 2 */
 }
