New content and stylesheet for Developer page.

--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -13,7 +13,7 @@
   --glowHalf1: #ffd8b7;
   --glowHalf2: #48293f;
   --headingHalf1: #4a3459;
-  --headingHalf2: #ffb58d;
+  --headingHalf2: #ffb18b;
   --knockout: #ffffff;
   --multiscreen: multiply;
   --text: #121f26;
@@ -63,7 +63,7 @@
   --glowHalf1: #5a3a67;
   --glowHalf2: #fea385;
   --headingHalf1: #fc9f7d;
-  --headingHalf2: #522a41;
+  --headingHalf2: #49293f;
   --knockout: #000000;
   --multiscreen: screen;
   --text: #ffffff;
@@ -108,7 +108,7 @@
     --glowHalf1: #5a3a67;
     --glowHalf2: #fea385;
     --headingHalf1: #fc9f7d;
-    --headingHalf2: #522a41;
+    --headingHalf2: #49293f;
     --knockout: #000000;
     --multiscreen: screen;
     --text: #ffffff;
@@ -152,7 +152,7 @@
     --glowHalf1: #ffd8b7;
     --glowHalf2: #48293f;
     --headingHalf1: #4a3459;
-    --headingHalf2: #ffb58d;
+    --headingHalf2: #ffb18b;
     --knockout: #ffffff;
     --multiscreen: multiply;
     --text: #121f26;
