SCSS and wizardry.

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -97,7 +97,7 @@ td a {
   box-sizing: border-box;
   color: currentColor;
   text-decoration: none;
-  transition: all ease 0.2s;
+  transition: border-bottom ease 0.2s;
 }
 .text :is(a:focus, a:hover):not(.button),
 th :is(a:focus, a:hover),
@@ -149,6 +149,7 @@ td :is(a:focus, a:hover) {
 }
 .tint3_b::before {
   background-color: var(--color3);
+  background-image: linear-gradient(70deg, var(--color2), transparent);
   opacity: 0.4;
 }
 .cta,
@@ -399,12 +400,21 @@ textarea {
   color: currentColor;
   margin-bottom: 0;
   padding: var(--unit2);
-  transition: all ease 0.2s;
+  transition: box-shadow ease 0.2s, text-shadow ease 0.2s;
 }
 :is(input, textarea):focus {
   background-color: var(--darkish);
+  background-image: linear-gradient(
+      to bottom,
+      var(--dark) 0,
+      transparent 33%,
+      transparent
+    ),
+    linear-gradient(to right, var(--dark) 0, transparent 33%, transparent),
+    linear-gradient(to left, var(--dark) 0, transparent 33%, transparent),
+    linear-gradient(to top, var(--dark) 0, transparent 33%, transparent);
   color: var(--light);
-  box-shadow: inset 0 0 1em var(--dark);
+  // box-shadow: inset 0 0 1em var(--dark);
   text-shadow: 0 0 0.5em var(--lightish);
 }
 :is(input, textarea)::placeholder {
