--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -13,7 +13,7 @@ button {
 
   position: relative;
   text-decoration: none;
-  transition: all ease 0.5s;
+  transition: background-color ease 0.5s;
   &:focus,
   &:hover {
     background-color: var(--color4);
@@ -65,5 +65,44 @@ p .button {
   &:focus,
   &:hover {
     border: none;
+  }
+}
+.jump-button {
+  border: 0.075em solid currentColor;
+  border-radius: 100px;
+  color: var(--color5);
+  display: block;
+  font-size: 400%;
+  height: 0;
+  margin: auto;
+  overflow: hidden;
+  padding: 0.8em 0 0 0.8em;
+  position: relative;
+  width: 0;
+  transition: color 0.3s ease;
+  &:focus,
+  &:hover {
+    color: var(--color3);
+  }
+  &::before {
+    content: "\2193";
+    display: block;
+    height: 0.6em;
+    padding: 0;
+    width: 0.6em;
+
+    position: absolute;
+    top: 0.2em;
+    left: 0.1em;
+  }
+}
+.cta,
+.cta_b {
+  .jump-button {
+    color: var(--color6);
+    &:focus,
+    &:hover {
+      color: var(--color5);
+    }
   }
 }
