--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -4,6 +4,7 @@
 :root {
   --accent: #5a3a67;
   --color1: #ffffff;
+  --color1a: #fff6d8;
   --color2: #ffd8b7;
   --color3: #ff653a;
   --color4: #ea303c;
@@ -23,7 +24,9 @@
   --tint1: #ffffff66;
   --tint2: #ffcc9366;
   --tint3: #ff653a66;
-  --tint4: #fe574a66;
+  --tint4: #ea303c66;
+  --tint5: #5a3a6766;
+  --tint6: #121f2666;
   /* Consistent colors */
   --dark: #121f26;
   --darkish: #29232e;
@@ -54,6 +57,7 @@
 :root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) {
   --accent: #ffd8b7;
   --color1: #121f26;
+  --color1a: #302a3f;
   --color2: #5a3a67;
   --color3: #ea3052;
   --color4: #fd835e;
@@ -88,10 +92,12 @@
   --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
   --scrolltrack: #121f26;
   --lightish: #ffd8b7;
-  --tint1: #121f2666; /* alpha was: .4 */
-  --tint2: #5a3a6766; /* alpha was: .4 */
+  --tint1: #121f2666;
+  --tint2: #5a3a6766;
   --tint3: #ea305266;
-  --tint4: #ff653a66; /* alpha was: .4 */
+  --tint4: #fd835e66;
+  --tint5: #ffd8b766;
+  --tint6: #ffffff66;
 }
 
 /* Dark Mode Preferred */
@@ -99,6 +105,7 @@
   :root {
     --accent: #ffd8b7;
     --color1: #121f26;
+    --color1a: #302a3f;
     --color2: #5a3a67;
     --color3: #ea3052;
     --color4: #fd835e;
@@ -133,16 +140,19 @@
     --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
     --scrolltrack: #121f26;
     --lightish: #ffd8b7;
-    --tint1: #121f2666; /* alpha was: .4 */
-    --tint2: #5a3a6766; /* alpha was: .4 */
+    --tint1: #121f2666;
+    --tint2: #5a3a6766;
     --tint3: #ea305266;
-    --tint4: #ff653a66; /* alpha was: .4 */
+    --tint4: #fd835e66;
+    --tint5: #ffd8b766;
+    --tint6: #ffffff66;
   }
 
   /* Light Mode Selected */
   :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked) {
     --accent: #5a3a67;
     --color1: #ffffff;
+    --color1a: #fff6d8;
     --color2: #ffd8b7;
     --color3: #ff653a;
     --color4: #ea303c;
@@ -162,7 +172,9 @@
     --tint1: #ffffff66;
     --tint2: #ffcc9366;
     --tint3: #ff653a66;
-    --tint4: #fe574a66;
+    --tint4: #ea303c66;
+    --tint5: #5a3a6766;
+    --tint6: #121f2666;
     /* Consistent colors */
     --dark: #121f26;
     --darkish: #29232e;
