--- a/src/css/solutions.scss
+++ b/src/css/solutions.scss
@@ -1,8 +1,10 @@
 .all-ears {
   height: auto;
+  max-width: 550px;
   width: 320px;
+
   position: absolute;
-  bottom: -22.9vw;
+  bottom: -20.15vw;
   right: 0;
   @media (min-width: 1000px) {
     width: 32vw;
