--- a/src/css/wizard.scss
+++ b/src/css/wizard.scss
@@ -1,3 +1,6 @@
+.wizard {
+  transition: height 1s ease;
+}
 .wizard input[type="radio"] {
   position: fixed;
   left: -100px;
@@ -6,6 +9,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  transition: height 1s ease;
 }
 .wizard ul li {
   margin: 0;
@@ -17,30 +21,31 @@
   box-sizing: border-box;
   display: grid;
   grid-template-rows: 0fr;
-  /* height: max-content; */
   margin: 0;
-  /* max-height: 0; */
   opacity: 0;
   overflow: hidden;
-  /* transition: all 3s cubic-bezier(1, 0, 1, 0); */
-  transition: all 0.3s cubic-bezier(0.8, 1.2, 0.9, 1);
+  transition: transform 0.7s cubic-bezier(0, 1, 0, 1);
 }
 .wizard .question,
 .wizard .end {
-  background-image: linear-gradient(90deg, var(--color4), var(--color5));
+  background-color: var(--color5);
+  background-image: linear-gradient(90deg, var(--tint4), transparent);
   border-radius: 0 var(--unit2) var(--unit2) var(--unit2);
   color: var(--color1);
   margin-right: var(--unit8);
   transform: translate(-100vw, -25vh);
 }
 .wizard .answer {
-  background-color: var(--color2);
-  background-image: linear-gradient(90deg, var(--color2), var(--color2));
+  background-color: var(--tint2);
+  background-image: linear-gradient(90deg, var(--color1a), transparent);
   border-radius: var(--unit2) var(--unit2) 0 var(--unit2);
   color: var(--color6);
   cursor: pointer;
   margin-left: var(--unit8);
   transform: translate(100vw, 25vh);
+  &:hover {
+    background-color: var(--tint3);
+  }
 }
 .wizard .answer label {
   cursor: inherit;
@@ -52,32 +57,16 @@
   padding: 0 var(--unit4);
   transition: inherit;
 }
-.wizard .answer:hover {
-  background-color: var(--color3);
-  background-image: linear-gradient(90deg, var(--color2), var(--color3));
-}
 .wizard input[type="radio"]:checked + ul > li > .question,
 .wizard input[type="radio"]:checked + ul > li > .answer,
 .wizard input[type="radio"]:checked + .end {
   grid-template-rows: 1fr;
   margin-bottom: var(--unit2);
-  /* max-height: 800px; */
   opacity: 1;
   transform: translate(0);
-  /* transition: all 0.3s cubic-bezier(0, 1, 0, 1); */
 }
 .wizard input[type="radio"]:checked + ul > li > .question > .qa_bubble,
 .wizard input[type="radio"]:checked + ul > li > .answer > .qa_bubble,
 .wizard input[type="radio"]:checked + .end > .qa_bubble {
   padding: var(--unit3) var(--unit4);
 }
-/* .wizard input[type="radio"]:checked + ul > li > .question,
-.wizard input[type="radio"]:checked + .end {
-  padding: var(--unit3) var(--unit4);
-}
-.wizard input[type="radio"]:checked + ul > li > .answer label {
-  padding: var(--unit3) var(--unit4);
-} */
-/* .wizard .step {
-  transition: all 0.3s cubic-bezier(0, 1, 0, 1);
-} */
