--- a/src/css/developer.scss
+++ b/src/css/developer.scss
@@ -4,9 +4,10 @@
   position: absolute;
   bottom: -11.1vw;
   right: 6vw;
-  @media (min-width: 1100px) {
+  @media (min-width: 960px) {
     height: auto;
     width: 22%;
+    min-width: 350px;
   }
 }
 @media (max-width: 620px) {
