Removed nav indicator. Adjusted surrounding spacing accordingly.

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -716,7 +716,7 @@ table.compare .compare-cta h4 {
 }
 .items li,
 .items span {
-  background-color: var(--tint1);
+  background-color: var(--color1a);
   border-radius: var(--radius-all);
   color: var(--color6);
   display: inline-block;
