Applied SCSS and new adjustments to Home page hero.

--- a/src/css/split.css
+++ b/src/css/split.css
@@ -1,7 +1,7 @@
 .splitWrap {
-  /* overflow: hidden;
+  overflow: hidden;
   margin: -26vw 0;
-  padding: 26vw 0; */
+  padding: 26vw 0;
   width: 100vw;
 }
 .split {
