--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -357,9 +357,9 @@ h3.tilt:has(+ p) {
   max-width: 100%;
   width: 420px;
 }
-section h1 {
+main section h1 {
   box-sizing: border-box;
-  font-size: calc(2vh + 4vw);
+  font-size: 4em;
   font-style: oblique;
   padding: 0 var(--unit8);
   margin: auto;
@@ -368,6 +368,11 @@ section h1 {
   transform: skewY(14.125deg);
   transform-origin: bottom right;
   width: 100%;
+  @media (max-width: 700px) {
+    & {
+      font-size: 9.1vw;
+    }
+  }
 }
 section.alignable .compare h2 {
   margin-bottom: 1em;
