--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,10 +1,19 @@
 main:has(.nav) section:first-of-type {
   margin-top: 160px;
-  @media (max-width: 960px) {
+  @media (max-width: 999px) {
     margin-top: calc(352px + -20vw);
   }
-  @media (max-width: 696px) {
+  @media (max-width: 700px) {
     margin-top: 212px;
+  }
+}
+main:has(.nav) section h1 {
+  margin-top: 60px;
+  @media (max-width: 999px) {
+    margin-top: calc(290px - 22vw);
+  }
+  @media (max-width: 700px) {
+    margin-top: 20vw;
   }
 }
 .nav {
