--- a/src/css/heroHome.scss
+++ b/src/css/heroHome.scss
@@ -10,7 +10,7 @@ body:has(.heroClip) {
   margin-bottom: 0;
   @media (orientation: portrait) {
     & {
-      margin-bottom: -6vh;
+      margin-bottom: -20px;
       max-width: 100vw;
       overflow: hidden;
     }
@@ -62,6 +62,7 @@ body:has(.heroClip) {
     height: var(--hero-height);
     margin: 0;
     padding: 0;
+    position: absolute;
 
     .jBig-1,
     .jBig-2 {
