--- a/src/css/wizard.scss
+++ b/src/css/wizard.scss
@@ -1,5 +1,5 @@
 .wizard {
-  transition: height 1s ease;
+  // transition: height 1s ease;
   input[type="radio"] {
     position: fixed;
     left: -100px;
@@ -8,7 +8,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    transition: height 1s ease;
+    // transition: height 1s ease;
     li {
       margin: 0;
       padding: 0;
@@ -23,7 +23,7 @@
     margin: 0;
     opacity: 0;
     overflow: hidden;
-    transition: transform 0.7s cubic-bezier(0, 1, 0, 1);
+    transition: transform 0.3s cubic-bezier(0, 1, 0, 1);
   }
   .question,
   .end {
@@ -38,7 +38,6 @@
     background-color: var(--tint2);
     background-image: linear-gradient(90deg, var(--color1a), transparent);
     border-radius: var(--unit2) var(--unit2) 0 var(--unit2);
-    color: var(--color6);
     cursor: pointer;
     margin-left: var(--unit8);
     transform: translate(100vw, 25vh);
@@ -46,14 +45,20 @@
       background-color: var(--tint3);
     }
     & > label {
+      color: var(--color6);
       cursor: inherit;
       display: block;
+    }
+    & > a {
+      color: var(--color6);
+      display: block;
+      text-decoration: none;
     }
   }
   .qa_bubble {
     box-sizing: border-box;
     overflow: hidden;
-    padding: 0 var(--unit4);
+    padding: 0 var(--unit3);
     transition: inherit;
   }
   input[type="radio"]:checked + ul > li > .question,
@@ -64,7 +69,7 @@
     opacity: 1;
     transform: translate(0);
     & > .qa_bubble {
-      padding: var(--unit3) var(--unit4);
+      padding: var(--unit2) var(--unit3);
     }
   }
   .qa_restart {
