--- a/src/css/global.css
+++ b/src/css/global.css
@@ -302,6 +302,7 @@ h4 {
   color: var(--color5);
   font-family: Rubik, sans-serif;
   font-weight: 700;
+  letter-spacing: -0.03em;
   line-height: 1em;
   margin: 0;
   padding-top: 1em;
@@ -315,7 +316,7 @@ h2 {
 }
 p,
 ul {
-  letter-spacing: -0.6px;
+  /* letter-spacing: -0.6px; */
   /* line-height: 1.1rem; */
   margin-top: 0;
 }
