Optimized icon CSS (SCSS :).

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -279,6 +279,9 @@ article,
 .in-the-corner > * {
   max-width: 300px;
 }
+.inline {
+  display: inline;
+}
 .full-width {
   max-width: unset;
 }
@@ -294,6 +297,16 @@ article,
 }
 .overlay {
   mix-blend-mode: overlay;
+}
+@media (hover: hover) {
+  .reveal,
+  .reveal-child-b b {
+    opacity: 0;
+  }
+  .reveal:hover,
+  .reveal-child-b:hover b {
+    opacity: 1;
+  }
 }
 h1,
 h2,
