--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -45,7 +45,7 @@ body {
   font: 400 16px/1.3em Courier, monospace;
   margin: 0;
   padding: 0;
-  position: relative;
+  // position: relative;
   scrollbar-color: var(--color3) var(--color1);
   scrollbar-width: 6px;
   width: 100vw;
@@ -56,7 +56,7 @@ body > div {
   background-attachment: fixed;
   background-image: var(--gradBg);
   background-repeat: no-repeat;
-  position: relative;
+  // position: relative;
   z-index: -10;
 }
 a {
