--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -5,10 +5,10 @@
   font-size: 16px;
 }
 // html:not(:has(.abrupt-scroll)) {
-//   /* scroll-snap-type: y proximity; */
 // }
 html {
   scroll-behavior: smooth;
+  // scroll-snap-type: y proximity;
   scrollbar-color: var(--color3) var(--scrolltrack);
   scrollbar-width: thin;
 }
@@ -47,7 +47,7 @@ body {
   font: 400 16px/1.3em Courier, monospace;
   margin: 0;
   padding: 0;
-  // position: relative;
+  position: relative;
   scrollbar-color: var(--color3) var(--color1);
   scrollbar-width: 6px;
   width: 100vw;
