--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -725,13 +725,13 @@ table.compare .compare-cta h4 {
   width: calc(100% - var(--unit16));
   h2,
   h3 {
-    margin-bottom: 0.5em;
+    margin-bottom: 7%;
     padding-top: 0;
     position: static;
     translate: unset;
     text-align: left;
   }
-  &.coluns-few__tilt {
+  &.columns-few__tilt {
     h2,
     h3 {
       font-style: oblique;
@@ -746,6 +746,9 @@ table.compare .compare-cta h4 {
         shape-outside: polygon(0% 0%, 100% 0%, 100% 100%);
         width: 120px;
       }
+      @media (min-width: 620px) {
+        margin-bottom: 1em;
+      }
     }
   }
   @media (min-width: 620px) {
@@ -754,7 +757,7 @@ table.compare .compare-cta h4 {
       grid-template-rows: auto;
       grid-auto-flow: columns;
       grid-template-columns: repeat(2, 1fr);
-      &.coluns-few__tilt {
+      &.columns-few__tilt {
         transform: skewY(14.125deg);
         .column {
           transform: skewY(-14.125deg);
