Moved extra details (that I had at the bottom of the Home page) to /developer. Fixed ExternalLink icon as used by the Buttons component.

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -40,6 +40,7 @@ button:hover {
   padding-right: var(--unit8);
 }
 .button .icon.external {
+  padding: 0;
   position: absolute;
   top: var(--unit2);
   right: var(--unit2);
