Improved hand-printed font stack.

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -48,7 +48,8 @@ p {
   position: relative;
 }
 .written-note {
-  font-family: "Bradley Hand", "Bradley Hand ITC", "Segoe Print", cursive;
+  font-family: "Segoe Print", "Bradley Hand", "Bradley Hand ITC", "Noteworthy",
+    "Comic Sans", "Comic Sans MS", "Courier New", "Courier", monospace;
   position: absolute;
   text-align: center;
   text-wrap: balance;
