--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -38,6 +38,11 @@
         scale: 1.25;
       }
     }
+    &--em {
+      height: 1em;
+      padding: 0;
+      width: 1em;
+    }
   }
 }
 // @media (hover: hover) {
