Swapped out forms for 3w4gatsby clean buttons. Updated blog & post queries to use createdAt as fallback. Change links to /story to go to /blog/journey-of-an-artist/. Added _redirects.

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -52,6 +52,7 @@ a.post-link {
 .blog article {
   box-sizing: border-box;
   transform: skew(14.125deg);
+  padding-bottom: var(--unit4);
   position: relative;
 }
 .blog article:last-of-type {
